<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome_string">Добро пожаловать!</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="les_manns_cafe_and_patisserie">les_manns_cafe_and patisserie</string>
    <string name="greetings">Добрый день, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что желаете добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink_type">Выберите тип напитка:</string>
    <string name="make_order">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives_label">Добавки:</string>
    <string name="error_fields_empty">Пожалуйста, заполните все поля!</string>
    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Черный</item>
        <item>Травяной</item>
        <item>Каркадээ</item>
    </array>
    <array name="types_of_coffee">
        <item>Американо</item>
        <item>Капучино</item>
        <item>Латте</item>
        <item>Руссиано</item>
    </array>
</resources>